Fixed Overflow

--- a/css/style.css
+++ b/css/style.css
@@ -23,6 +23,7 @@ body {
   line-height: 1.4;
   display: grid;
   grid-template-areas: "navbar home";
+  overflow-x: hidden;
 }
 
 #navbar {
@@ -136,7 +137,7 @@ body {
 }
 
 #gallery {
-  max-width: 80wh;
+  max-width: 80vw;
   margin: auto;
 }
 
